// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component rendering variants should match to snapshot - standard TableComponent: TableComponent standard 1`] = `
<div
  className="MuiTableContainer-root"
>
  <table
    className="MuiTable-root makeStyles-root-1"
    role={null}
  >
    <thead
      className="MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Test header cell
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Table component rendering variants should match to snapshot - with dividers off: TableComponent with dividers off 1`] = `
<div
  className="MuiTableContainer-root"
>
  <table
    className="MuiTable-root makeStyles-root-5"
    role={null}
  >
    <thead
      className="MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Test header cell
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Table component rendering variants should match to snapshot - with dividers on: TableComponent with dividers on 1`] = `
<div
  className="MuiTableContainer-root"
>
  <table
    className="MuiTable-root makeStyles-root-8"
    role={null}
  >
    <thead
      className="MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Test header cell
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Table component rendering variants should match to snapshot - with rounded applied: TableComponent with rounded borders 1`] = `
<div
  className="MuiTableContainer-root"
>
  <table
    className="MuiTable-root makeStyles-root-3"
    role={null}
  >
    <thead
      className="MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Test header cell
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Table component rendering variants should match to snapshot - with rounded off: TableComponent with rounded off 1`] = `
<div
  className="MuiTableContainer-root"
>
  <table
    className="MuiTable-root makeStyles-root-9"
    role={null}
  >
    <thead
      className="MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Test header cell
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Table component rendering variants should match to snapshot - with rounded on and dividers off: TableComponent with rounded on and dividers off 1`] = `
<div
  className="MuiTableContainer-root"
>
  <table
    className="MuiTable-root makeStyles-root-6"
    role={null}
  >
    <thead
      className="MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Test header cell
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Table component rendering variants should match to snapshot - with striped off: TableComponent with stripes off 1`] = `
<div
  className="MuiTableContainer-root"
>
  <table
    className="MuiTable-root makeStyles-root-4"
    role={null}
  >
    <thead
      className="MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Test header cell
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Table component rendering variants should match to snapshot - with striped on: TableComponent with striped on 1`] = `
<div
  className="MuiTableContainer-root"
>
  <table
    className="MuiTable-root makeStyles-root-7"
    role={null}
  >
    <thead
      className="MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Test header cell
        </th>
      </tr>
    </thead>
  </table>
</div>
`;
